# Churn-Prediction

./: README.md  main.py  pyproject.toml  requirements.txt
data/curated/: Customer-Churn_dummies.csv  Customer-Churn_iv_removed.csv
models/: champion_xgb_pipeline.pkl
notebooks/: base_aed_pp.html  base_aed_sv.html  best_model.ipynb  dt_model.ipynb  eda.ipynb  feature_engineering.ipynb  lr_model.ipynb  rf_model.ipynb  xgb_model.ipynb
notebooks/data/curated/: Customer-Churn_dummies.csv
src/a3data/: api.py  feature_engineering.py  predict.py  preditiva.py  preprocessing.py  train.py
tests/: test_preprocessing.py
