[project]
name = "a3data"
version = "0.1.0"
description = ""
authors = [
    {name = "guedesf",email = "guedesf@google.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (<2.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "matplotlib (>=3.5,<=3.10)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "ydata-profiling (>=4.17.0,<5.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "dtreeviz (>=2.2.2,<3.0.0)",
    "category-encoders (>=2.9.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.1.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "a3data", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
